Prevent images from getting too large

--- a/recipes/static/style.scss
+++ b/recipes/static/style.scss
@@ -131,7 +131,7 @@ img.icon {
 /* View page */
 img.view {
     margin-bottom: 30px;
-    width: 100%;
+    max-height: 300px;
 }
 div.label {
     font-size: 24px;
